--- a/index.html
+++ b/index.html
@@ -24,6 +24,26 @@
         <div class="top-navigator menu">
             <i class="fas fa-th"></i>
             <div class="menu-info"></div>
+           <div class="up">
+               <!--각각 앞에 이미지 추가-->
+               <span class="acc">Google계정</span>
+               <span class="search">검색</span>
+               <span class="map">지도</span>
+               <span class="youtube">YouTube</span>
+               <span class="play">Play</span>
+               <span class="news">뉴스</span>
+
+           </div>
+           <div class ="mid">
+               <!--각각 앞에 이미지 추가-->
+               <span class="doc">문서</span>
+               <span class="ss">스프레드시트</span>
+               <span class="ppt">프레젠테이션</span>
+           </div>
+           <div class ="bot">
+            <button class="etc">기타 Google 앱 및 제품</button>
+           </div>
+
         </div>
         <div class="top-navigator profile">
             <div class="decorater">
